--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -24,6 +24,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Domain/Products/Entity'
                 prefix: 'App\Domain\Products\Entity'
                 alias: Products
+            Categories:
+                is_bundle: false
+                type: attribute
+                dir: '%kernel.project_dir%/src/Domain/Categories/Entity'
+                prefix: 'App\Domain\Categories\Entity'
+                alias: Categories
         controller_resolver:
             auto_mapping: false
 
