--- a/app/composer.json
+++ b/app/composer.json
@@ -75,6 +75,10 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.64"
+        "phpunit/phpunit": "*",
+        "symfony/maker-bundle": "^1.64",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/dom-crawler": "7.3.*",
+        "symfony/css-selector": "7.3.*"
     }
 }
