--- a/app/config/packages/nelmio_api_doc.yaml
+++ b/app/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,9 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: Minha API
+            title: Serviço de Produtos - 11soat-fast-food
             version: 1.0.0
+            description: API para gerenciamento de produtos no sistema 11soat-fast-food.
     areas:
         default:
             path_patterns:
