--- a/app/config/services_test.yaml
+++ b/app/config/services_test.yaml
@@ -5,5 +5,16 @@ services:
   App\Infrastructure\Test\Doubles\InMemoryCategoryRepository:
     public: true
 
+  App\Infrastructure\Test\Doubles\InMemoryItemRepository:
+    public: true
+
+  App\Infrastructure\Test\Doubles\InMemoryProductItemRepository:
+    arguments:
+      - '@App\Infrastructure\Test\Doubles\InMemoryProductRepository'
+      - '@App\Infrastructure\Test\Doubles\InMemoryItemRepository'
+    public: true
+
   App\Application\Port\Output\Repositories\ProductRepositoryPort: '@App\Infrastructure\Test\Doubles\InMemoryProductRepository'
   App\Application\Port\Output\Repositories\CategoryRepositoryPort: '@App\Infrastructure\Test\Doubles\InMemoryCategoryRepository'
+  App\Application\Port\Output\Repositories\ItemRepositoryPort: '@App\Infrastructure\Test\Doubles\InMemoryItemRepository'
+  App\Application\Port\Output\Repositories\ProductItemRepositoryPort: '@App\Infrastructure\Test\Doubles\InMemoryProductItemRepository'
