Adds SonarQube integration and code coverage
Enables SonarQube analysis by adding configuration file.

Configures PHPUnit for generating code coverage reports in Clover, HTML, XML, and JUnit formats, which are used by SonarQube for detailed analysis.

Adds scripts to composer for running the tests and generating the coverage reports.

Updates the default PHPUnit config to enable improved feedback and logging during testing, as well as setting standard test environment variables.

--- a/app/composer.json
+++ b/app/composer.json
@@ -54,6 +54,8 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
+        "test:coverage": "phpunit --coverage-html coverage/html",
+        "test:coverage-clover": "phpunit --coverage-clover coverage/clover.xml",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
