--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
-         bootstrap="tests/bootstrap.php"
-         colors="true"
+     xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
+     bootstrap="tests/bootstrap.php"
+     colors="true"
+     cacheDirectory=".phpunit.cache"
+     displayDetailsOnTestsThatTriggerWarnings="true"
+     displayDetailsOnTestsThatTriggerErrors="true"
+     failOnWarning="true"
+     failOnRisky="true"
 >
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
+
+    <coverage processUncoveredFiles="true">
+        <report>
+            <clover outputFile="coverage/clover.xml"/>
+            <html outputDirectory="coverage/html"/>
+            <xml outputDirectory="coverage/coverage-xml"/>
+        </report>
+    </coverage>
+
+    <!-- Logging -->
+    <logging>
+        <junit outputFile="coverage/junit.xml"/>
+    </logging>
+
 
     <php>
         <env name="APP_ENV" value="test" force="true"/>
