Configures project for SonarQube analysis
Updates the SonarQube configuration file with project-specific details.

Configures the project's database to use PostgreSQL for local development.

Configures phpunit to generate junit.xml and clover.xml for sonar analysis.

--- a/app/sonar-project.properties
+++ b/app/sonar-project.properties
@@ -1,7 +1,7 @@
 # sonar-project.properties - CONFIGURAÇÃO PARA PHP - COLOCAR SEUS DADOS
-sonar.organization=sua-organizacao
-sonar.projectKey=seu-projeto-php
-sonar.projectName=Seu Projeto PHP
+sonar.organization=forgebits
+sonar.projectKey=ForgeBits_11soat-fast-food-api-symfony
+sonar.projectName=11soat-fast-food-api-symfony
 
 # Fontes de código - SUA ESTRUTURA REAL (exemplos comuns em PHP)
 # Laravel: app,routes,config,database
