--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -15,7 +15,7 @@
         </testsuite>
     </testsuites>
 
-    <coverage processUncoveredFiles="true">
+    <coverage>
         <report>
             <clover outputFile="coverage/clover.xml"/>
             <html outputDirectory="coverage/html"/>
@@ -27,7 +27,6 @@
     <logging>
         <junit outputFile="coverage/junit.xml"/>
     </logging>
-
 
     <php>
         <env name="APP_ENV" value="test" force="true"/>
