--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -51,7 +51,7 @@ jobs:
         id: run-tests
         run: |
           echo "Running PHPUnit tests with coverage..."
-          vendor/bin/phpunit --coverage-clover=coverage/clover.xml --coverage-xml=coverage/coverage-xml --coverage-html=coverage/html --log-junit=coverage/junit.xml
+          XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text
 
           # Verifica se o clover.xml foi gerado
           if [ -f "coverage/clover.xml" ]; then
@@ -109,7 +109,7 @@ jobs:
 
       - name: 📊 Generate detailed coverage report
         run: |
-          vendor/bin/phpunit --coverage-clover=coverage/clover.xml \
+          XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover=coverage/clover.xml \
             --coverage-xml=coverage/coverage-xml \
             --coverage-html=coverage/html \
             --log-junit=coverage/junit.xml
