Adds composer flag to ignore platform requirements
Adds `--ignore-platform-reqs` flag to the composer install command
in the CI workflow. This prevents potential dependency installation failures
due to platform version mismatches in the CI environment.

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -45,7 +45,7 @@ jobs:
           tools: composer:v2
 
       - name: 📦 Install Composer dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --ignore-platform-reqs --prefer-dist --no-progress --no-suggest
 
       - name: 🧪 Run PHPUnit tests with coverage
         id: run-tests
