--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -99,13 +99,13 @@ jobs:
       - name: ⚙️ Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: '8.3'
           extensions: mbstring, xml, ctype, json, tokenizer, pdo, pdo_mysql
           coverage: xdebug
           tools: composer:v2
 
       - name: 📦 Install Composer dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --ignore-platform-reqs --prefer-dist --no-progress --no-suggest
 
       - name: 📊 Generate detailed coverage report
         run: |
@@ -349,13 +349,13 @@ jobs:
       - name: ⚙️ Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: '8.3'
           extensions: mbstring, xml, ctype, json, tokenizer, pdo, pdo_mysql
           coverage: xdebug
           tools: composer:v2
 
       - name: 📦 Install Composer dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --ignore-platform-reqs --prefer-dist --no-progress --no-suggest
 
       - name: 📁 Download coverage report
         uses: actions/download-artifact@v4
