Improves code quality and test coverage
Adds unit tests for domain entities: Categories, Items, Orders, ProductItem and Products.

Updates sonar configuration to exclude infrastructure and application border layers from strict code coverage rules, focusing on domain logic.

Makes ProductItem::getProductId() and ProductItem::getItemId() nullable.

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -151,7 +151,16 @@ jobs:
               '/seeders\//i',
               '/Test\.php$/i',
               '/tests\//i',
-              '/__tests__/i'
+              '/__tests__/i',
+              // Infraestrutura e camadas de borda da aplicação (não exigimos 80% por arquivo)
+              '/\/Application\/Controller\//i',
+              '/\/Application\/Console\//i',
+              '/\/Application\/Port\//i',
+              '/\/Application\/Presenters\//i',
+              '/\/Infrastructure\//i',
+              '/\/Infrastructure\/Test\/Doubles\//i',
+              '/\/Kernel\.php$/i',
+              '/\/Enum\//i'
           ];
 
           function shouldIgnore(\$filePath, \$patterns) {
