Excludes Infrastructure from coverage reports
Excludes the Infrastructure directory from the code coverage reports generated by PHPUnit.
This improves the accuracy of the coverage reports by focusing on application-level code and avoiding irrelevant infrastructure details.

--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -31,6 +31,8 @@
             <directory>vendor</directory>
             <directory>var</directory>
             <directory>tests</directory>
+            <!-- Excluir Infrastructure da medição de cobertura -->
+            <directory>src/Infrastructure</directory>
         </exclude>
     </source>
 
