Excludes Helpers from code coverage reports
Excludes the Helpers directory from code coverage reports in both the SonarCloud configuration and the PHPUnit configuration.

This change ensures that code coverage metrics focus on core application logic and exclude peripheral layers, providing a more accurate representation of test coverage for critical code.

--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -33,6 +33,8 @@
             <directory>tests</directory>
             <!-- Excluir Infrastructure da medição de cobertura -->
             <directory>src/Infrastructure</directory>
+            <!-- Excluir Helpers (camada de borda) da medição de cobertura -->
+            <directory>src/Application/Helpers</directory>
         </exclude>
     </source>
 
