--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -155,6 +155,7 @@ jobs:
               // Infraestrutura e camadas de borda da aplicação (não exigimos 80% por arquivo)
               '/\/Application\/Controller\//i',
               '/\/Application\/Console\//i',
+              '/\/Application\/Helpers\//i',
               '/\/Application\/Port\//i',
               '/\/Application\/Presenters\//i',
               '/\/Infrastructure\//i',
