Configures SonarCloud and PHPUnit for better code analysis
Enhances code quality analysis by configuring SonarCloud with specific exclusions and coverage settings.

This change improves the accuracy of SonarCloud analysis by excluding HTTP-related directories from coverage reports and quality checks. This is due to the fact these files are related to application borders and, therefore, don't need a high coverage ratio.

Also configures `deploy.yml` workflow to trigger on pull requests
instead of pushes to main and master branches.

--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -35,6 +35,8 @@
             <directory>src/Infrastructure</directory>
             <!-- Excluir Helpers (camada de borda) da medição de cobertura -->
             <directory>src/Application/Helpers</directory>
+            <!-- Excluir Http (middlewares, listeners, etc.) da medição de cobertura -->
+            <directory>src/Application/Http</directory>
         </exclude>
     </source>
 
