--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy to EC2
 
 on:
-  push:
-    branches: [ "main", "master" ]
+  pull_request:
+    branches: [main, master]
   workflow_dispatch:
 
 jobs:
