--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           REMOTE_HOST: ec2-54-85-143-71.compute-1.amazonaws.com
         run: |
           ssh -o StrictHostKeyChecking=yes "${REMOTE_USER}@${REMOTE_HOST}" \
-            'cd /app && docker compose up --build -d -V'
+            'cd /11soat-fast-food-api-symfony && docker compose up --build -d -V'
