Fetches latest code before deploying
Ensures the deployment process uses the most up-to-date version of the code by pulling the latest changes from the repository before building and deploying. This prevents deploying outdated code.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Deploy via SSH and Docker Compose
         run: |
           ssh -i fiap.pem -o StrictHostKeyChecking=yes "${REMOTE_USER}@${REMOTE_HOST}" \
-            "mkdir -p ${REMOTE_PATH} && cd ${REMOTE_PATH} && docker compose up --build -d -V"
+            "mkdir -p ${REMOTE_PATH} && cd ${REMOTE_PATH} && git pull && docker compose up --build -d -V"
