--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,8 +1,8 @@
 name: SonarQube Analysis - 80% Coverage per File (PHP)
 
 on:
-  pull_request:
-    branches: [main, master]
+  push:
+    branches: [main]
 
 permissions:
   contents: read
