Extends SonarQube analysis to develop branch
Configures the SonarQube analysis workflow to include the `develop` branch and pull requests.

This ensures code quality checks are performed on both the `main` and `develop` branches, and that pull requests are also analyzed for potential issues.

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,9 @@ name: SonarQube Analysis - 80% Coverage per File (PHP)
 
 on:
   push:
-    branches: [main]
+    branches: [develop, main]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 permissions:
   contents: read
