--- a/app/sonar-project.properties
+++ b/app/sonar-project.properties
@@ -1,29 +1,19 @@
-# sonar-project.properties - CONFIGURAÇÃO PARA PHP - COLOCAR SEUS DADOS
+# sonar-project.properties
 sonar.organization=forgebits
 sonar.projectKey=ForgeBits_11soat-fast-food-api-symfony
 sonar.projectName=11soat-fast-food-api-symfony
 
-# Fontes de código - SUA ESTRUTURA REAL (exemplos comuns em PHP)
-# Laravel: app,routes,config,database
-# Symfony: src
-# Projeto simples: src
-sonar.sources=src,app
+sonar.sources=app/src
 
-# Arquivos que devem ficar fora da análise
-sonar.exclusions=**/vendor/**,**/storage/**,**/bootstrap/cache/**,**/node_modules/**,**/public/**,**/*Test.php,**/tests/**,**/database/migrations/**,**/database/seeders/**
+sonar.exclusions=**/vendor/**, **/public/index.php, app/src/Kernel.php, **/tests/**
 
-# Para forçar análise detalhada por arquivo
-sonar.php.coverage.reportPaths=coverage/clover.xml
+sonar.php.coverage.reportPaths=app/coverage.xml
 
-# Testes - SUA ESTRUTURA REAL
-sonar.tests=tests
-sonar.test.inclusions=**/*Test.php
+sonar.tests=app/tests
+sonar.test.inclusions=app/tests/**/*Test.php
 
-# PHP
 sonar.language=php
-sonar.php.tests.reportPath=coverage/junit.xml
+sonar.php.tests.reportPath=app/junit.xml
 
-# Configurações adicionais
 sonar.scm.provider=git
-sonar.scm.disabled=false
 sonar.sourceEncoding=UTF-8
