--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.sources=src
 sonar.tests=tests
 
 # Relatórios
-sonar.php.coverage.reportPaths=coverage.xml
+sonar.php.coverage.reportPaths=clover.xml
 sonar.php.tests.reportPath=junit.xml
 
 # Inclusões e Exclusões
