Configures coverage exclusions for SonarQube
Excludes specific directories and file types from SonarQube coverage reports to align with pipeline requirements.

This focuses coverage analysis on areas requiring high test coverage, such as core logic, while excluding areas like controllers, DTOs, and infrastructure code.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,5 +15,22 @@ sonar.php.tests.reportPath=junit.xml
 sonar.test.inclusions=tests/**/*Test.php
 sonar.exclusions=**/vendor/**, **/public/index.php, src/Kernel.php, **/tests/**
 
+# Exclusões de COBERTURA para alinhar com a pipeline
+# Ignora arquivos que não precisam de 100% de cobertura de teste (Controllers, DTOs, etc.)
+sonar.coverage.exclusions= \
+  src/Application/Console/**, \
+  src/Application/Controller/**, \
+  src/Application/Helpers/**, \
+  src/Application/Http/**, \
+  src/Application/Port/**, \
+  src/Application/Presenters/**, \
+  src/Infrastructure/**, \
+  src/Kernel.php, \
+  **/*DTO.php, \
+  **/*Enum.php, \
+  **/*Interface.php, \
+  **/ValueObjects/**
+
+
 sonar.scm.provider=git
 sonar.sourceEncoding=UTF-8
