--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,9 +1,9 @@
 FROM php:8.3-fpm
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    git unzip libicu-dev libzip-dev zlib1g-dev libpq-dev \
+    git unzip libicu-dev libzip-dev zlib1g-dev libpq-dev libcurl4-openssl-dev \
     $PHPIZE_DEPS \
- && docker-php-ext-install intl zip pdo pdo_pgsql \
+ && docker-php-ext-install intl zip pdo pdo_pgsql curl \
  && pecl install xdebug \
  && docker-php-ext-enable xdebug \
  && apt-get purge -y --auto-remove $PHPIZE_DEPS \
