Updates SonarQube analysis workflow
Removes the 'develop' branch from the SonarQube analysis workflow's trigger, ensuring that analysis runs only on pushes to the 'main' branch and pull requests. This streamlines the analysis process and focuses it on the primary development branch.

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: SonarQube Analysis - 80% Coverage per File (PHP)
 
 on:
   push:
-    branches: [develop, main]
+    branches: [main]
   pull_request:
     types: [opened, synchronize, reopened]
 
