--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,9 +7,9 @@ sonar.host.url=https://sonarcloud.io
 sonar.sources=src
 sonar.tests=tests
 
-# Relatórios
-sonar.php.coverage.reportPaths=clover.xml
-sonar.php.tests.reportPath=junit.xml
+# Relatórios (ajustados para a pasta 'coverage' gerada no CI)
+sonar.php.coverage.reportPaths=coverage/clover.xml
+sonar.php.tests.reportPath=coverage/junit.xml
 
 # Inclusões e Exclusões
 sonar.test.inclusions=tests/**/*Test.php
