Excludes Kernel.php from coverage reports
Excludes `src/Kernel.php` from code coverage reports. This avoids a warning in SonarQube related to the Kernel file.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -37,6 +37,8 @@
             <directory>src/Application/Helpers</directory>
             <!-- Excluir Http (middlewares, listeners, etc.) da medição de cobertura -->
             <directory>src/Application/Http</directory>
+            <!-- Excluir Kernel.php da medição de cobertura para evitar aviso no Sonar -->
+            <file>src/Kernel.php</file>
         </exclude>
     </source>
 
