--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
     push:
-        branches: [main] # O deploy geralmente ocorre no push para a main após o merge
+        branches: [main]
     workflow_dispatch:
 
 jobs:
